Use build time env var when computing image hash